--- a/LMS/Views/Courses/IndexStudent.cshtml
+++ b/LMS/Views/Courses/IndexStudent.cshtml
@@ -10,29 +10,39 @@
 }
 
 <div >
-    <h5 class="display-4">Welcome to Lexicon,
+    <p class="display-6">Welcome to Lexicon,
         you are logged in as a Student 
         
-    </h5>
+    </p>
     Your current course:                              
 
 
     @{
         var studentId = int.Parse(@UserManager.GetUserId(User));
         int.Parse(@UserManager.GetUserId(User));
-        var courseId = @Model.ListOfUsers[studentId].CourseId; /*var courseId = @Model.ListOfStudents[studentId].CourseId;*/
+        //var courseId = @Model.ListOfUsers[studentId].CourseId; 
+        var courseId = @Model.ListOfUsers.Where(g => g.Id == studentId).FirstOrDefault().CourseId;
 
 
-      
 
 
-        var currentUserCorse = @Model.ListOfCourses[courseId.Value-1].Name; //List is indexed from 0 while datatable is indexed from 1
-        var start = @Model.ListOfCourses[courseId.Value - 1].StartDate;
-        var end = @Model.ListOfCourses[courseId.Value - 1].EndDate;
+        /* var currentUserCorse = @Model.ListOfCourses[courseId.Value-1].Name;*/ //List is indexed from 0 while datatable is indexed from 1
+
+        var currentUserCorse = @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().Name;
+        //var start = @Model.ListOfCourses[courseId.Value - 1].StartDate;
+        var start = @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().StartDate;
+
+        //var end = @Model.ListOfCourses[courseId.Value - 1].EndDate;
+        var end = @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().EndDate;
+
+
 
          }
     @Html.DisplayFor(model => currentUserCorse) <br />
-    @Html.DisplayFor(model => @Model.ListOfCourses[courseId.Value - 1].StartDate) to @Html.DisplayFor(model =>  @Model.ListOfCourses[courseId.Value - 1].EndDate)
+   @* @Html.DisplayFor(model => @Model.ListOfCourses[courseId.Value - 1].StartDate) to @Html.DisplayFor(model =>  @Model.ListOfCourses[courseId.Value - 1].EndDate)*@
+
+    @Html.DisplayFor(model => @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().StartDate) to @Html.DisplayFor(model =>  @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().EndDate)
+
     <br /><br />
 
     @if (start>DateTime.Now | end<DateTime.Now){ <p>You have no modules at present</p> }
@@ -42,7 +52,10 @@
    
                 <p>Your current module:</p>
 
-        @foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)
+       @* @foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)*@
+        @foreach (var item in Model.ListOfCourses.Where(m => m.Id == courseId).FirstOrDefault().Modules)
+
+
         {
             @if (item.StartDate < DateTime.Now && item.EndDate > DateTime.Now)
             {
@@ -126,10 +139,12 @@
 
     <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
-
-
-
-            @foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)
+ 
+            
+            
+            @*@foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)*@
+            @foreach (var item in Model.ListOfModules.Where(m => m.CourseId == courseId))
+            
             {
 
                 {
@@ -137,6 +152,12 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
+                        <br>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+
+
                         <br>
                         <td>
                             @Html.DisplayFor(modelItem => item.StartDate)
@@ -151,9 +172,7 @@
                     </tr>
                 }
             }
-            
-            
-            
+              
            
         </div>
 
@@ -240,7 +259,7 @@
     </span>*@
 
 
-
+@*
     <div class="mb-3">
         <label for="formFile" class="form-label">Fil att läsa</label>
         <input class="form-control" type="file" id="formFile">
@@ -250,7 +269,7 @@
 
 
 
-
+*@
 
 
 
