--- a/LMS/Views/Courses/IndexStudent.cshtml
+++ b/LMS/Views/Courses/IndexStudent.cshtml
@@ -18,44 +18,21 @@
 
 
     @{
-        var studentId = int.Parse(@UserManager.GetUserId(User));
-        int.Parse(@UserManager.GetUserId(User));
-        //var courseId = @Model.ListOfUsers[studentId].CourseId; 
+        var studentId = int.Parse(@UserManager.GetUserId(User));        
         var courseId = @Model.ListOfUsers.Where(g => g.Id == studentId).FirstOrDefault().CourseId;
-
-
-
-
-        /* var currentUserCorse = @Model.ListOfCourses[courseId.Value-1].Name;*/ //List is indexed from 0 while datatable is indexed from 1
-
         var currentUserCorse = @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().Name;
-        //var start = @Model.ListOfCourses[courseId.Value - 1].StartDate;
         var start = @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().StartDate;
-
-        //var end = @Model.ListOfCourses[courseId.Value - 1].EndDate;
         var end = @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().EndDate;
+     }
 
-
-
-         }
     @Html.DisplayFor(model => currentUserCorse) <br />
-   @* @Html.DisplayFor(model => @Model.ListOfCourses[courseId.Value - 1].StartDate) to @Html.DisplayFor(model =>  @Model.ListOfCourses[courseId.Value - 1].EndDate)*@
-
     @Html.DisplayFor(model => @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().StartDate) to @Html.DisplayFor(model =>  @Model.ListOfCourses.Where(h => h.Id == courseId).FirstOrDefault().EndDate)
-
     <br /><br />
 
     @if (start>DateTime.Now | end<DateTime.Now){ <p>You have no modules at present</p> }
     else
-    {
-    
-   
-                <p>Your current module:</p>
-
-       @* @foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)*@
-        @foreach (var item in Model.ListOfCourses.Where(m => m.Id == courseId).FirstOrDefault().Modules)
-
-
+    {                <p>Your current module:</p>
+       @foreach (var item in Model.ListOfCourses.Where(m => m.Id == courseId).FirstOrDefault().Modules)
         {
             @if (item.StartDate < DateTime.Now && item.EndDate > DateTime.Now)
             {
@@ -71,14 +48,10 @@
                  <td>
                         @Html.DisplayFor(modelItem => item.EndDate)
                  </td>
-                
-
                 </tr>
             }
         }   
-    
-    
-    <br /><br />
+        <br /><br />
 
 
         <p>Your current Activity: </p>
@@ -100,20 +73,14 @@
                     <td>
                     @Html.DisplayFor(modelItem => item.EndDate)
                     </td>
-                
-
-                </tr>
+                                </tr>
                
-
-                    <br/>
-
-                    <br/>
+                    <br/><br/>
            
                     <td>
                     @Html.DisplayFor(modelItem => item.ActivityType.Name)
                     </td>
-            }
-       
+            }      
         }
     
             <br /><br />
@@ -142,11 +109,10 @@
  
             
             
-            @*@foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)*@
+           
             @foreach (var item in Model.ListOfModules.Where(m => m.CourseId == courseId))
             
             {
-
                 {
                     <tr>
                         <td>
@@ -172,15 +138,9 @@
                     </tr>
                 }
             }
-              
-           
-        </div>
-
-
-
-
+         </div>
         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
-           @* <partial name="_Index_Partial_Teacher" model="@Model.ListOfUsers" />*@
+          
 
             @foreach (var item in Model.ListOfTeachers)
             {
@@ -198,23 +158,18 @@
                         <br>
                         <br>
 
-                    </tr>
-                
+                    </tr>                
             }
 
-       
-       </div>
+              </div>
         
         
        
         
         <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
 
-
-
-            @foreach (var item in Model.ListOfStudents)
-            {
-                
+           @foreach (var item in Model.ListOfStudents)
+            {                
                 if (item.CourseId == courseId) 
                 {
                     <tr>
@@ -228,12 +183,9 @@
 
                         <br>
                         <br>
-
                     </tr>
                 }
             }
-
-
             
         </div>
     </div>
